Cambios finales en CV

--- a/cv.html
+++ b/cv.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <div class="vl"></div>
-    <div class="s1">
-        <div class="left">
+    <div class="grid-container">
+        <div class="grid-left">
             <span> 
                 <center>
 
@@ -72,7 +72,7 @@
                 </ul>
             </p>
         </div>
-        <div class="right">
+        <div class="grid-right">
             <p>
                 <h2 class="titulos">Formación académica</h2>
                 <hr> 
